Update backend files and settings